# models/diet-plan.model.js
@@ -1,20 +1,20 @@
 const { DataTypes } = require('sequelize');
 
 module.exports = (sequelize) => {
-    return sequelize.define('DietPlan', {
+    const DietPlan = sequelize.define('DietPlan', {
         dietPlanId: {
             type: DataTypes.INTEGER,
             primaryKey: true,
             autoIncrement: true,
-            allowNull: false,
+            allowNull: false
         },
         nutritionistId: {
             type: DataTypes.INTEGER,
-            allowNull: false,
+            allowNull: false
         },
         clientId: {
             type: DataTypes.INTEGER,
-            allowNull: false,
+            allowNull: false
         },
         planName: {
             type: DataTypes.STRING(255),
@@ -26,11 +26,31 @@ module.exports = (sequelize) => {
         },
         duration: {
             type: DataTypes.INTEGER,
-            allowNull: false,
+            allowNull: false
         },
         planFee: {
             type: DataTypes.FLOAT,
             allowNull: false,
+        },
+        totalCalories: {
+            type: DataTypes.INTEGER,
+            allowNull: false
+        },
+        totalGrams: {
+            type: DataTypes.FLOAT,
+            allowNull: true
+        },
+        protein: {
+            type: DataTypes.FLOAT,
+            allowNull: true
+        },
+        carbs: {
+            type: DataTypes.FLOAT,
+            allowNull: true
+        },
+        fats: {
+            type: DataTypes.FLOAT,
+            allowNull: true
         },
         createdAt: {
             type: DataTypes.DATE,
@@ -42,4 +62,23 @@ module.exports = (sequelize) => {
         freezeTableName: true,
         timestamps: false,
     });
+
+    DietPlan.associations = [
+        {
+            type: 'hasOne',
+            target: 'Client',
+            sourceKey: 'clientId', 
+            foreignKey: 'userId',
+            as: 'client', 
+        },
+        {
+            type: 'hasOne',
+            target: 'Nutritionist',
+            sourceKey: 'nutritionistId', 
+            foreignKey: 'userId',
+            as: 'nutritionist', 
+        }
+    ]
+
+    return DietPlan
 };
